add home page and browse page

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>{title}</title>
   
     <link rel="shortcut icon" href="/assets/favicon.ico">
+    <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="{bundleURL}/build/bundle.css" rel="stylesheet" media="all">
     <script>
       window.__INITIAL_STATE__ = {state}
